tests/correct/classdef_basic.py
class rest:
indent a = "b"
dedent
