tests/error/class.py
class Foo:
    class Bar:
        a = 10
    b = 7
